# opengl-template

./: .clang-format  .cmake-format.yaml  .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix  imgui.ini
assets/shaders/: cube.frag  cube.vert  fragment.glsl  light-source.frag  light-source.vert  model.frag  model.vert  vertex.glsl
src/: camera.cpp  camera.h  main.cpp  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h
